fix: allow wrap of author list

--- a/less/current/modules/search-result-card.less
+++ b/less/current/modules/search-result-card.less
@@ -12,6 +12,7 @@
   }
   .search-result-author-list {
     display: flex;
+    flex-wrap: wrap;
   }
   .search-result-row {
     display: flex;
